--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -1,3 +1,4 @@
+/*establishing color styles*/
 :root {
     --darkcolor:rgb(73, 74, 77);
     --lightcolor:rgb(235, 238, 242);
@@ -11,6 +12,7 @@
     padding: 0;
 }
 
+/*header styling*/
 header {
     background-image: url(../images/backQuay.jpg);
     background-size: cover;
@@ -22,7 +24,7 @@ header {
     position: -webkit-sticky;
     color: var(--darkcolor);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+    font-size: 25px;
     padding: 30px;
 }
 
@@ -55,6 +57,7 @@ header nav ul li a:hover {
     color: var(--highlightcolor);
 }
 
+/*hero styles and positioning*/
 .hero {
     background-image: url(../images/backQuay.jpg);
     background-size: cover;
@@ -70,7 +73,7 @@ header nav ul li a:hover {
     position: absolute;
     left: 30%;
     top: 70%;
-    height: 80px;
+    height: auto;
     width: 60%;
     padding: 10px;
     background-color: rgba(235, 238, 242, .8);
@@ -81,6 +84,7 @@ header nav ul li a:hover {
     text-align: left;
 }
 
+/*article styling*/
 article {
     position: relative;
     background-color: var(--lightcolor);
@@ -107,7 +111,7 @@ article div {
     position: absolute;
     left: 60%;
     top: 130px;
-    height: 80px;
+    height: auto;
     width: 30%;
     padding: 10px;
     background-color: rgba(235, 238, 242, .5);
@@ -118,6 +122,7 @@ article div {
     text-align: left;
 }
 
+/*contact form styling*/
 .contactform {
     position: relative;
     background-color: var(--lightcolor);
@@ -155,6 +160,8 @@ contacctform button:hover {
     padding: 20px;
 }
 
+
+/*footer styling*/
 footer {
     height: 50px;
     width: 100%;
