--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -29,7 +29,7 @@ header {
 }
 
 header div {
-    height: 50px;
+    height: auto;
     width: 100%;
     padding: 10px;
     background-size: cover;
@@ -177,4 +177,84 @@ footer {
 footer img {
     height: 12px;
     width: 12px;
+}
+
+/*media queries*/
+@media screen and (max-width: 980px) {
+    header {
+        font-size: 20px;
+    }
+
+    header div {
+        padding: 5px;
+    }
+
+    article div {
+        font-size: 12px;
+    }
+
+    footer {
+        font-size: 10px;
+    }
+
+    footer img {
+        height: 8px;
+        width: 8px;
+    }
+}
+
+@media screen and (max-width: 730px) {
+        header {
+            font-size: 38px;
+        }
+    
+        header nav ul li a {
+            padding: 0 80px;
+        }
+
+        article div {
+            font-size: 10px;
+        }
+    
+        footer {
+            font-size: 8px;
+        }
+    
+        footer img {
+            height: 7px;
+            width: 7px;
+        }
+}
+
+@media screen and (max-width: 480px) {
+        header {
+            font-size: 25px;
+        }
+
+        header nav ul li a {
+            padding: 50px;
+        }
+
+        .contactform input, textarea, button {
+            width: 80%;
+        }
+}
+
+@media screen and (max-width: 340px) {
+    header {
+        font-size: 20px;
+    }
+
+    header nav ul li a {
+        padding: 30px;
+    }
+
+    .hero div {
+        top: 50%;
+        font-size: 10px;
+    }
+
+    article div {
+        top: 30px;
+    }
 }
